# nova-forge-sdk

./: .semgrepignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: semgrep-analysis.yml
.github/workflows/: build.yml  codeql.yml  git-secrets-scan.yml  publish.yml  semgrep-analysis.yml  slack.yaml
docs/: data_prep.md  iam_setup.md  instance_type_spec.md  job_notifications.md  rft_multiturn.md  spec.md
docs/spec/: dataset.md  enums.md  index.md  job-results.md  model-customizer.md  notifications.md  rft-multiturn.md  runtime-managers.md  service-classes.md  utilities.md
docs/user-guides/: data_prep.md  iam_setup.md  instance_type_spec.md  rft_multiturn.md  troubleshooting.md
samples/: dataprep_quickstart.ipynb  nova_quickstart.ipynb  rft_multiturn_quickstart.ipynb  rft_singleturn_quickstart.ipynb  serverless_quickstart.ipynb
src/amzn_nova_customization_sdk/: __init__.py  __version__.py
src/amzn_nova_forge/: __init__.py  __version__.py
src/amzn_nova_forge_sdk/: __version__.py
tests/: conftest.py
tests/core/: test_job_cache.py
tests/dataset/: test_arrow_loader.py  test_backward_compat.py  test_cpt_dataset_validator.py  test_data_state.py  test_dataset_loader.py  test_dataset_row_count_validation.py  test_dataset_schema_resolver.py  test_dataset_validator.py  test_default_text_filter_operation.py  test_directory_loading.py  test_eval_dataset_validator.py  test_exact_dedup_filter_operation.py  test_filter_conversion.py  test_fuzzy_dedup_filter_operation.py  test_invalid_records_filter.py  test_lazy_loading.py  test_memory_efficiency.py  test_multimodal_conversion.py  test_multimodal_s3_upload.py  test_multimodal_schema.py  test_operation_result.py  test_parquet_loader.py  test_prepare_input.py  test_rft_dataset_validator.py  test_rft_multiturn_tool_calling.py  test_rft_multiturn_validation.py  test_sft_dataset_validator.py
tests/deployer/: test_forge_deployer.py
tests/evaluator/: test_forge_evaluator.py
tests/iam/: test_iam_role_creator.py
tests/inference/: test_forge_inference.py
tests/manager/: test_bedrock_runtime_manager.py  test_glue_runtime_manager.py  test_local_runtime_manager.py  test_runtime_manager.py  test_serverless_runtime_manager.py
tests/mcp/: test_server.py
tests/unit/: conftest.py
(+423 files in other folders)
